# amd-slingshot

./: .gitignore  ANALYSIS_AND_ROADMAP.md  COMPLETE_GUIDE.md  IMPROVEMENTS.md  QUICK_START.md  README.md  TESTS_AND_AGENTS.md  config.py  fil.md  file.txt  pyproject.toml  run_and_test.sh
AMD-SlingShot-Hackathon-main/: pyproject.toml  requirements.txt
AMD-SlingShot-Hackathon-main/app/agents/: planner.py  worker.py
AMD-SlingShot-Hackathon-main/app/core/: config.py
AMD-SlingShot-Hackathon-main/app/db/: mock_db.py
AMD-SlingShot-Hackathon-main/app/rl/: environment.py
AMD-SlingShot-Hackathon-main/app/services/: simulation_service.py
AMD-SlingShot-Hackathon-main/baselines/: __init__.py  greedy_baseline.py
AMD-SlingShot-Hackathon-main/docs/: day3_environment_audit.md
AMD-SlingShot-Hackathon-main/environment/: belief_state.py  diagnostics.py  project_env.py
AMD-SlingShot-Hackathon-main/scripts/: run_tests.bat
AMD-SlingShot-Hackathon-main/tests/: test_planner.py  test_worker_agent.py
AMD-SlingShot-Hackathon-main/training/: __init__.py  visualize.py
AMD-SlingShot-Hackathon-main/visualization/: plot_ablations.py
agents/: __init__.py  dqn_agent.py
app/: main.py
baselines/: base_policy.py  hybrid_baseline.py  improved_agents.py  random_baseline.py  skill_baseline.py  stf_baseline.py
docs/: AGENTS_AND_SCRIPTS.md
environment/: __init__.py  task.py  worker.py
evaluation/: ablation_studies.py
scripts/: demo.py  demo_enhanced.py  run_and_test.py  run_mcp.py  run_server.py  run_simulation.py  run_tests.py  verify_backend.py
tests/: test_ablation.py  (+4 more)
(+13 files in other folders)
