[project]
name = "amd-slingshot-hackathon"
version = "0.1.0"
description = "RL-Driven Agentic Project Manager for simulating and optimizing project task allocation with reinforcement learning"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "fastapi>=0.129.0",
    "fastmcp>=2.14.5",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "mcp[cli]>=1.26.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "stable-baselines3>=2.7.1",
    "uvicorn>=0.40.0",
    "torch>=2.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
]
